--- a/Food-Business-Project/css/stle.css
+++ b/Food-Business-Project/css/stle.css
@@ -14,7 +14,7 @@ Deafult: 1
 -Primary: #e67e22
 
 -Tints:#fdf2e9
--Shades:
+-Shades:#cf711f
 -Accents:
 -Greys:
 #555
@@ -39,7 +39,7 @@ Deafult: 1
 }
 
 body {
-  font-family: sans-serif;
+  font-family: "Rubik", sans-serif;
   line-height: 1;
   font-weight: 400;
   color: #555;
@@ -77,18 +77,20 @@ body {
 .btn:link,
 .btn:visited {
   display: inline-block;
-  background-color: #e67e22;
-  color: #fff;
   text-decoration: none;
   font-size: 2rem;
+  font-weight: 600;
   padding: 1.6rem 3.2rem;
-  border-radius: 15px;
+  border-radius: 9px;
+  /* Put transition on original "state" */
+  transition: all 0.3s;
 }
 
 .btn--full:link,
 .btn--full:visited {
   background-color: #e67e22;
   color: #fff;
+  margin-right: 1.6rem;
 }
 
 .btn--full:hover,
@@ -114,4 +116,41 @@ body {
 
 .hero-img {
   width: 100%;
+}
+
+.margin-right-sm {
+  margin-right: 1.6rem !important;
+}
+
+.delivered-meals {
+  display: flex;
+  align-items: center;
+  gap: 1.6rem;
+  margin-top: 8rem;
+}
+
+.delivered-imgs {
+  display: flex;
+}
+
+.delivered-imgs img {
+  height: 4.8rem;
+  width: 4.8rem;
+  border-radius: 50%;
+  margin-right: -1.6rem;
+  border: 3px solid #fdf2e9;
+}
+
+.delivered-imgs img:last-child {
+  margin: 0;
+}
+
+.delivered-text {
+  font-size: 1.8rem;
+  font-weight: 600;
+}
+
+.delivered-text span {
+  color: #e67e22;
+  font-weight: 700;
 }
