--- a/Food-Business-Project/css/style.css
+++ b/Food-Business-Project/css/style.css
@@ -183,7 +183,7 @@
   line-height: 1.8;
 }
 
-.step-img-box {
+.step-image-box {
   position: relative;
 
   display: flex;
@@ -191,8 +191,8 @@
   justify-content: center;
 }
 
-.step-img-box::before,
-.step-img-box::after {
+.step-image-box::before,
+.step-image-box::after {
   content: "";
   display: block;
   border-radius: 50%;
@@ -202,7 +202,7 @@
   transform: translate(-50%, -50%);
 }
 
-.step-img-box::before {
+.step-image-box::before {
   width: 60%;
   /* height: 60%; */
 
@@ -212,7 +212,7 @@
   z-index: -2;
 }
 
-.step-img-box::after {
+.step-image-box::after {
   width: 50%;
   padding-bottom: 45%;
   background-color: #fae5d3;
