--- a/Food-Business-Project/css/querries.css
+++ b/Food-Business-Project/css/querries.css
@@ -1,9 +1,9 @@
-/* rem and em do NOT depend on hyml font-size in media queries!
-Instead, 1rem = 1em = 16px */
+/* rem and em do NOT depend on html font-size in media queries! Instead, 1rem = 1em = 16px */
 
-/***************************************/
+/**************************/
 /* BELOW 1344px (Smaller desktops) */
-/***************************************/
+/**************************/
+
 @media (max-width: 84em) {
   .hero {
     max-width: 120rem;
@@ -18,17 +18,18 @@ Instead, 1rem = 1em = 16px */
   }
 }
 
-/***************************************/
-/* BELOW 1200px (Landscape tablets) */
-/***************************************/
+/**************************/
+/* BELOW 1200px (Landscape Tablets) */
+/**************************/
+
 @media (max-width: 75em) {
   html {
-    /* 9px / 16px */
+    /* 9px / 16px  */
     font-size: 56.25%;
   }
 
   .grid {
-    column-gap: 3.8rem;
+    column-gap: 4.8rem;
     row-gap: 6.4rem;
   }
 
@@ -57,11 +58,13 @@ Instead, 1rem = 1em = 16px */
   }
 }
 
-/***************************************/
+/**************************/
 /* BELOW 944px (Tablets) */
-/***************************************/
+/**************************/
+
 @media (max-width: 59em) {
   html {
+    /* 8px / 16px = 0.5 = 50% */
     font-size: 50%;
   }
 
@@ -106,6 +109,7 @@ Instead, 1rem = 1em = 16px */
   }
 
   .cta {
+    /* 3/5 = 60% + 2/5 = 40% */
     grid-template-columns: 3fr 2fr;
   }
 
@@ -116,69 +120,73 @@ Instead, 1rem = 1em = 16px */
   .btn--form {
     margin-top: 1.2rem;
   }
+
+  /* MOBILE NAVIGATION */
+  .btn-mobile-nav {
+    display: block;
+    z-index: 9999;
+  }
+
+  .main-nav {
+    background-color: rgba(255, 255, 255, 0.9);
+    -webkit-backdrop-filter: blur(5px);
+    backdrop-filter: blur(10px);
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    transform: translateX(100%);
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: all 0.5s ease-in;
+
+    /* Hide navigation */
+    /* Allows NO transitions at all */
+    /* display: none; */
+
+    /* 1) Hide it visually */
+    opacity: 0;
+
+    /* 2) Make it unaccessible to mouse and keyboard */
+    pointer-events: none;
+
+    /* 3) Hide it from screen readers */
+    visibility: hidden;
+  }
+
+  .nav-open .main-nav {
+    opacity: 1;
+    pointer-events: auto;
+    visibility: visible;
+    transform: translateX(0);
+  }
+
+  .nav-open .icon-mobile-nav[name="close-outline"] {
+    display: block;
+  }
+
+  .nav-open .icon-mobile-nav[name="menu-outline"] {
+    display: none;
+  }
+
+  .main-nav-list {
+    flex-direction: column;
+    gap: 4.8rem;
+  }
+
+  .main-nav-link:link,
+  .main-nav-link:visited {
+    font-size: 3rem;
+  }
 }
 
-/* MOBILE NAVIGATION */
-.btn-mobile-nav {
-  display: block;
-}
+/**************************/
+/* BELOW 704px (Smaller tablets) */
+/**************************/
 
-.main-nav {
-  background-color: rgb(255, 255, 255, 0.97);
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100vh;
-  transform: translateX(100%);
-
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  transition: all 0.5s ease-in;
-
-  /* Hide navigation */
-  /* Allows no transitions at all */
-  /* display: none; */
-
-  /* 1. Hide element visally */
-  opacity: 0;
-
-  /* 2. Make it uncessible to mouse and keyboard */
-  pointer-events: none;
-
-  /* 3. Hide it from screen readers */
-  visibility: hidden;
-}
-
-.nav-open .main-nav {
-  opacity: 1;
-  pointer-events: auto;
-  visibility: visible;
-  transform: translateX(0%);
-}
-
-.nav-open .icon-mobile-nav[name="close-outline"] {
-  display: block;
-}
-
-.nav-open .icon-mobile-nav[name="menu-outline"] {
-  display: none;
-}
-
-.main-nav-list {
-  flex-direction: column;
-  gap: 4.8rem;
-}
-
-.main-nav-link:link,
-.main-nav-link:visited {
-  font-size: 3rem;
-}
-
-/***************************************/
-/* BELOW 704x (Smaller tablets) */
-/***************************************/
 @media (max-width: 44em) {
   .grid--3-cols,
   .grid--4-cols {
@@ -198,7 +206,7 @@ Instead, 1rem = 1em = 16px */
     width: 100%;
   }
 
-  .grid-footer {
+  .grid--footer {
     grid-template-columns: repeat(6, 1fr);
   }
 
@@ -214,9 +222,10 @@ Instead, 1rem = 1em = 16px */
   }
 }
 
-/***************************************/
-/* BELOW 544x (Phones) */
-/***************************************/
+/**************************/
+/* BELOW 544px (Phones) */
+/**************************/
+
 @media (max-width: 34em) {
   .grid {
     row-gap: 4.8rem;
@@ -250,15 +259,15 @@ Instead, 1rem = 1em = 16px */
     height: 1.2rem;
   }
 
-  .step-image-box:nth-child(2) {
+  .step-img-box:nth-child(2) {
     grid-row: 1;
   }
 
-  .step-image-box:nth-child(6) {
+  .step-img-box:nth-child(6) {
     grid-row: 5;
   }
 
-  .step-image-box {
+  .step-img-box {
     transform: translateY(2.4rem);
   }
 
@@ -275,19 +284,73 @@ Instead, 1rem = 1em = 16px */
     grid-template-columns: 1fr;
   }
 
+  .cta-text-box {
+    padding: 3.2rem;
+  }
+
   .cta-img-box {
     height: 32rem;
     grid-row: 1;
   }
+}
 
-  .cta-text-box {
-    padding: 3.2rem;
+/* 
+- Font sizes (px)
+10 / 12 / 14 / 16 / 18 / 20 / 24 / 30 / 36 / 44 / 52 / 62 / 74 / 86 / 98
+
+- Spacing system (px)
+2 / 4 / 8 / 12 / 16 / 24 / 32 / 48 / 64 / 80 / 96 / 128
+*/
+
+/**************************/
+/* Fixing Safari flexbox gap */
+/**************************/
+
+.no-flexbox-gap .main-nav-list li:not(:last-child) {
+  margin-right: 4.8rem;
+}
+
+.no-flexbox-gap .list-item:not(:last-child) {
+  margin-bottom: 1.6rem;
+}
+
+.no-flexbox-gap .list-icon:not(:last-child) {
+  margin-right: 1.6rem;
+}
+
+.no-flexbox-gap .delivered-faces {
+  margin-right: 1.6rem;
+}
+
+.no-flexbox-gap .meal-attribute:not(:last-child) {
+  margin-bottom: 2rem;
+}
+
+.no-flexbox-gap .meal-icon {
+  margin-right: 1.6rem;
+}
+
+.no-flexbox-gap .footer-row div:not(:last-child) {
+  margin-right: 6.4rem;
+}
+
+.no-flexbox-gap .social-links li:not(:last-child) {
+  margin-right: 2.4rem;
+}
+
+.no-flexbox-gap .footer-nav li:not(:last-child) {
+  margin-bottom: 2.4rem;
+}
+
+@media (max-width: 75em) {
+  .no-flexbox-gap .main-nav-list li:not(:last-child) {
+    margin-right: 3.2rem;
   }
 }
 
-/* Font sizes (px):
-10/12/14/16/18/20/24/30/36/44/52/62/74/86/98 
-
--SPACING SYSTEM (px):
-2/4/8/12/16/24/32/48/64/80/96/128
-*/
+@media (max-width: 59em) {
+  .no-flexbox-gap .main-nav-list li:not(:last-child) {
+    margin-right: 0;
+    margin-bottom: 4.8rem;
+  }
+}
